--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,15 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.1"
-tokio = "1.43.0"
+reqwest = { version = "0.11", features = ["stream", "multipart"] }
+tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.6", features = ["codec"] }
+futures = "0.3"
+
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/clienttest.rs"
