--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ reqwest = { version = "0.11", features = ["stream", "multipart"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["codec"] }
 futures = "0.3"
+rocket-multipart-form-data = "0.10"
 
 [[bin]]
 name = "server"
